--- a/package.json
+++ b/package.json
@@ -42,8 +42,11 @@
 		"vitest": "^2.0.4"
 	},
 	"dependencies": {
+		"@lucia-auth/adapter-drizzle": "^1.1.0",
+		"@lucia-auth/adapter-postgresql": "^3.1.2",
 		"@neondatabase/serverless": "^0.9.4",
 		"drizzle-orm": "^0.33.0",
+		"lucia": "^3.2.2",
 		"postgres": "^3.4.5"
 	}
 }
