authjs implement wip

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@types/bcrypt": "^5.0.2",
 		"@types/eslint": "^9.6.0",
 		"autoprefixer": "^10.4.20",
 		"drizzle-kit": "^0.22.0",
@@ -42,7 +43,11 @@
 		"vitest": "^2.0.4"
 	},
 	"dependencies": {
+		"@auth/core": "^0.37.2",
+		"@auth/drizzle-adapter": "^1.7.2",
+		"@auth/sveltekit": "^1.7.2",
 		"@neondatabase/serverless": "^0.9.4",
+		"bcrypt": "^5.1.1",
 		"drizzle-orm": "^0.33.0",
 		"postgres": "^3.4.5"
 	}
